[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/Items and HUD.png" type="Texture" id=1]
[ext_resource path="res://items/DropItem.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="DropItem" type="Node2D"]
script = ExtResource( 2 )
frame = 6

[node name="RigidBody2D" type="RigidBody2D" parent="."]
collision_layer = 16
collision_mask = 65
mode = 2
gravity_scale = 4.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="RigidBody2D"]
texture = ExtResource( 1 )
hframes = 9
vframes = 6
frame = 6

[node name="PickupArea" type="Area2D" parent="RigidBody2D"]
collision_layer = 16
collision_mask = 2
input_pickable = false

[node name="PickupShape" type="CollisionShape2D" parent="RigidBody2D/PickupArea"]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="TimeToLive" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="RigidBody2D/PickupArea" to="." method="_on_PickupArea_area_entered"]
[connection signal="area_shape_entered" from="RigidBody2D/PickupArea" to="." method="_on_PickupArea_area_shape_entered"]
[connection signal="body_entered" from="RigidBody2D/PickupArea" to="." method="_on_PickupArea_body_entered" flags=6]
[connection signal="timeout" from="TimeToLive" to="." method="_on_TimeToLive_timeout"]
